Bug 544983 - select thread (ctrl+shift+A) not working in cross folder virtual/saved searched/unified folders; r=asuth